--- a/2015/elements/component/nf-site-header/nf-site-header.html
+++ b/2015/elements/component/nf-site-header/nf-site-header.html
@@ -47,9 +47,9 @@
       display: inline-block;
       top: 30px;
       right: 0;
-      z-index: 1;
+      z-index: 100;
       opacity: 0;
-      padding: 5px 0;
+      padding: 5px;
       background: rgba(97, 97, 97, 0.9);
       color: #FFFFFF;
       font-size: 12px;
@@ -112,9 +112,9 @@
         </paper-tabs>
       </div>
       <div class="nf-site-header__col nf-site-header__col--3">
-        <a class="nf-ticket-link">
+        <a class="nf-ticket-link" href="http://nodejs.connpass.com/event/20741/" target="_blank">
           <iron-icon icon="svg-icons:ticket" class="nf-ticket-link__icon"></iron-icon>
-          <div class="nf-ticket-link__tooltip">チケット購入<br>（Coming Soon）</div>
+          <div class="nf-ticket-link__tooltip">チケット購入</div>
         </a>
       </div>
     </div>
