Fix texture image

--- a/2016/css/teaser.scss
+++ b/2016/css/teaser.scss
@@ -205,7 +205,7 @@ a {
     bottom: 0;
     right: 0;
     z-index: 1;
-    background-image: url('../img/texture2.png');
+    background-image: url('../img/texture.png');
     background-size: auto 22px;
     opacity: 0.25;
   }
