Fix callfor-* background

--- a/2016/css/teaser.scss
+++ b/2016/css/teaser.scss
@@ -877,6 +877,8 @@ $hex-image: $hex-canvas * $hex-ratio;
   }
   &.-papers {
     background-image: url('../img/pic-cfp.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
     &::after {
       background-color: rgba(darken($color-grass,15%),0.9);
       @supports (mix-blend-mode: multiply) {
@@ -887,6 +889,8 @@ $hex-image: $hex-canvas * $hex-ratio;
   }
   &.-sponsors {
     background-image: url('../img/pic-cfs.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
     &::after {
       background-color: rgba(darken($color-sea,15%), 0.9);
       @supports (mix-blend-mode: multiply) {
