--- a/2016/css/teaser.scss
+++ b/2016/css/teaser.scss
@@ -179,6 +179,45 @@ a {
   }
 }
 
+// Hexagon
+$hex-ratio: 1.154;
+$hex-canvas: 362;
+$hex-image: $hex-canvas * $hex-ratio;
+
+.Hex {
+  display: inline-block;
+  width: $hex-canvas + px;
+  vertical-align: top;
+}
+.Hex-outer {
+  width: 100%;
+  height: 0;
+  padding-bottom: percentage($hex-ratio);
+  display: block;
+  transform-origin: 50% 50%;
+  transform: rotate(-60deg) skewY(30deg);
+  overflow: hidden;
+  position: relative;
+}
+.Hex-inner {
+  width: auto;
+  height: 100%;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  transform: skewY(-30deg) rotate(60deg);
+}
+.Hex-image {
+  width: $hex-image + px;
+  height: $hex-image + px;
+  transform: translateX(($hex-image - $hex-canvas)/2 * -1px);
+}
+
+
 // Background video | image
 .bg {
   position: fixed;
@@ -242,6 +281,34 @@ a {
 
 // Header
 .header {
+  padding: 2rem;
+  text-align: center;
+}
+.header-logo {
+  margin-bottom: 1.5rem;
+  @include over-sm {
+    margin-bottom: 3rem;
+    width: 180px;
+    height: 180px;
+  }
+}
+.header-title {
+  margin-bottom: 1.5rem;
+  line-height: 1;
+  font-weight: 100;
+  font-size: 1rem;
+  font-family: $type-base;
+  @include over-sm {
+    margin-bottom: 2.5rem;
+    font-size: 1.5rem;
+  }
+  @include over-md {
+    font-size: 2rem;
+  }
+}
+
+// Cover
+.cover {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -251,9 +318,6 @@ a {
   align-items: stretch;
   text-align: center;
 }
-
-// COver
-.cover {}
 .cover-logo {
   margin-bottom: 1.5rem;
   @include over-sm {
@@ -320,7 +384,6 @@ a {
   }
 }
 
-
 // Introduction
 .intro {}
 .intro-lead {
@@ -350,45 +413,6 @@ a {
       line-height: $line-roomy;
     }
   }
-}
-
-// Hexagon
-
-$hex-ratio: 1.154;
-$hex-canvas: 362;
-$hex-image: $hex-canvas * $hex-ratio;
-
-.Hex {
-  display: inline-block;
-  width: $hex-canvas + px;
-  vertical-align: top;
-}
-.Hex-outer {
-  width: 100%;
-  height: 0;
-  padding-bottom: percentage($hex-ratio);
-  display: block;
-  transform-origin: 50% 50%;
-  transform: rotate(-60deg) skewY(30deg);
-  overflow: hidden;
-  position: relative;
-}
-.Hex-inner {
-  width: auto;
-  height: 100%;
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  transform: skewY(-30deg) rotate(60deg);
-}
-.Hex-image {
-  width: $hex-image + px;
-  height: $hex-image + px;
-  transform: translateX(($hex-image - $hex-canvas)/2 * -1px);
 }
 
 // Speakers
@@ -1148,6 +1172,68 @@ $hex-image: $hex-canvas * $hex-ratio;
   text-align:left;
 }
 
+// CoC
+.coc {}
+.coc-title {
+  font-size: 2rem;
+  @include over-sm {
+    font-size: 3rem;
+  }
+  @include over-md {
+    font-size: 4rem;
+  }
+}
+.coc-body {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: $width-intro;
+  font-size: 0.875rem;
+  p {
+    margin-bottom: 1em;
+  }
+  @include over-sm {
+    font-size: 1rem;
+    p {
+      line-height: $line-roomy;
+    }
+  }
+}
+.coc__section {
+  margin-bottom: 1.5rem;
+  @include over-sm {
+    margin-bottom: 2.5rem;
+  }
+  @include over-md {
+  }
+}
+.coc__subtitle {
+  margin-bottom: 1.5rem;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.064em;
+  font-weight: 100;
+  font-size: 1.25rem;
+  color: $color-sand;
+  @include over-sm {
+    margin-bottom: 2.5rem;
+    font-size: 1.5rem;
+  }
+  @include over-md {
+    font-size: 2rem;
+  }
+}
+.coc__footer {
+  margin-bottom: 2rem;
+  text-align: right;
+  a {
+    color: $color-yellow;
+    text-decoration: underline;
+    &:hover {
+      text-decoration: none;
+    }
+  }
+}
+
 // Footer
 .footer {
   overflow: hidden;
@@ -1239,5 +1325,9 @@ $hex-image: $hex-canvas * $hex-ratio;
 // Utility
 .u-vh {
   @include visuallyHidden;
+}
+
+.u-em {
+  color: $color-yellow;
 }
 
