本番サイト構築の土台できた

--- a/2016/src/html/index.ejs
+++ b/2016/src/html/index.ejs
@@ -1,2 +1,5 @@
-<link rel="stylesheet" href="main.css">
-index <%= msg %>
+<%- include('_layout/header') -%>
+
+index
+
+<%- include('_layout/footer') -%>
