not definedエラー回避

--- a/2016/src/html/_layout/header.ejs
+++ b/2016/src/html/_layout/header.ejs
@@ -1,16 +1,16 @@
 <%
-var titleStr = title ? (title + ' > ') : '';
+var title = title ? (title + ' > ') : '';
 %>
 <!doctype html>
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title><%= titleStr %>東京Node学園祭2016 | 11月12日,13日開催！</title>
+    <title><%= title %>東京Node学園祭2016 | 11月12日,13日開催！</title>
     <!-- OGP -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@nodefest">
-    <meta property="og:title" content="<%= titleStr %>東京Node学園祭2016 | 11月12日,13日開催！">
+    <meta property="og:title" content="<%= title %>東京Node学園祭2016 | 11月12日,13日開催！">
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://nodefest.jp/2016/">
     <meta property="og:image" content="http://nodefest.jp/2016/img/ogimage.png">
