--- a/2016/src/scss/main.scss
+++ b/2016/src/scss/main.scss
@@ -72,13 +72,15 @@ body {
   background-color: $color-whitefog;
   color: $color-inky;
   overflow-x: hidden; // DEV
-  background-image: linear-gradient(150deg, $color-whitefog 0%, $color-greymist 50%, $color-inky 75%, $color-deepnight 100%),url('img/bg-shibuya.jpg');
-  background-size: 200%;
+  background-image: linear-gradient(150deg, $color-whitefog 0%, $color-greymist 50%, $color-inky 75%, $color-deepnight 100%),url('img/bg-shibuya2-color.jpg');
   background-size: cover, cover;
   background-position: center top;
   background-repeat: no-repeat;
   background-blend-mode: screen, normal;
   background-attachment: fixed;
+  @include over-md {
+
+  }
 }
 
 a {
@@ -188,8 +190,6 @@ a {
     //width: 15em;
     font-size: 1.6rem;
   }
-  @include over-md {
-  }
 }
 
 // Hexagon
@@ -286,16 +286,22 @@ $hex-image: $hex-canvas * $hex-ratio;
   position: relative;
   z-index: 2;
   display: block;
-  border: 10px solid $color-inky;
+  border: 5px solid $color-inky;
   margin-left: auto;
   margin-right: auto;
   margin-top: 8rem;
-  padding: 16px;
-  width: 448px;
-  height: 448px;
+  padding: 8px;
+  width: 224px;
+  height: 224px;
   mix-blend-mode: multiply;
-  &.-invert {
-    border-color: $color-whitefog;
+  @include over-md {
+    border: 10px solid $color-inky;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 8rem;
+    padding: 16px;
+    width: 448px;
+    height: 448px;
   }
 }
 .cover-outline {
@@ -304,6 +310,9 @@ $hex-image: $hex-canvas * $hex-ratio;
   right: 0;
   bottom: 2rem;
   z-index: 1;
+  @include over-md {
+
+  }
 }
 .cover-mountain {
   display: none; // DEV
@@ -329,44 +338,53 @@ $hex-image: $hex-canvas * $hex-ratio;
   margin-left: auto;
   margin-right: auto;
   max-width: $width-container;
-  text-align: right;
+  text-align: center;
+  @include over-md {
+    text-align: right;
+  }
 }
 .outline-body {
   display: inline-block;
   position: relative;
   z-index: 1;
-  padding-top: 4rem;
-  height: 12rem;
-  line-height: 1;
   text-align: center;
   letter-spacing: 0.16em;
   color: $color-whitefog;
+  @include over-md {
+    padding-top: 4rem;
+    height: 12rem;
+    line-height: 1;
+  }
 }
 .outline-date {
   text-transform: uppercase;
 }
 .outline-date,
 .outline-location {
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
+  font-weight: 100;
+  font-size: 1rem;
+  //@include over-sm {
+  //}
+  //@media (min-width: 590px) { // Minor Breakpoint
+  //}
+  @include over-md {
+    margin-bottom: 1rem;
+    font-size: 2rem;
+  }
+}
+.outline-name {
+  margin-bottom: 0.5rem;
   font-weight: 100;
   font-size: 2rem;
   //@include over-sm {
   //}
   //@media (min-width: 590px) { // Minor Breakpoint
   //}
-  //@include over-md {
-  //}
-}
-.outline-name {
-  margin-bottom: 1rem;
-  font-weight: 100;
-  font-size: 3.5rem;
-  //@include over-sm {
-  //}
-  //@media (min-width: 590px) { // Minor Breakpoint
-  //}
-  //@include over-md {
-  //}
+  @include over-md {
+    margin-bottom: 1rem;
+    font-size: 3.5rem;
+  }
 }
 
 // About
@@ -375,6 +393,10 @@ $hex-image: $hex-canvas * $hex-ratio;
   z-index: 1;
   margin-top: 2rem;
   margin-bottom: 4rem;
+  padding: 1rem;
+  @include over-md {
+    padding: 0;
+  }
 }
 
 .about-mountain {
@@ -401,11 +423,14 @@ $hex-image: $hex-canvas * $hex-ratio;
 .about-content {
   margin-left: auto;
   margin-right: auto;
-  padding: 2rem;
+  padding: 1rem;
   max-width: $width-textblock;
   background-color: $color-whitefog;
   border: 10px solid $color-creamhaze;
   box-shadow: 10px 10px 0 rgba($color-deepnight,0.25);
+  @include over-md {
+    padding: 2rem;
+  }
 }
 .about-title {
   line-height: $line-normal;
@@ -485,12 +510,11 @@ $hex-image: $hex-canvas * $hex-ratio;
   text-transform: uppercase;
   font-weight: 100;
   font-size: 1rem;
+  font-size: 2rem;
   color: $color-sunred;
   @include over-sm {
-    font-size: 1.5rem;
   }
   @media (min-width: 590px) { // Minor Breakpoint
-    font-size: 2rem;
   }
   @include over-md {
     font-size: 4em;
@@ -498,13 +522,18 @@ $hex-image: $hex-canvas * $hex-ratio;
 }
 .speakers-list {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
   margin-left: auto;
   margin-right: auto;
+  flex-direction: column;
+  justify-content: center;
   max-width: $width-container;
   > * {
     margin-bottom: 2rem;
+  }
+  @include over-md {
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
   }
 }
 .speaker {
@@ -741,7 +770,7 @@ $hex-image: $hex-canvas * $hex-ratio;
   z-index: 2;
   padding-top: 8rem;
   padding-bottom: 8rem;
-  background-color: rgba($color-sand,0.5);
+  //background-color: rgba($color-sand,0.5);
 }
 .tickets-action {
   text-align: center;
