--- a/2016/src/html/index.ejs
+++ b/2016/src/html/index.ejs
@@ -131,7 +131,7 @@
             </a>
           </li>
           <li>
-            <div class="speaker">
+            <a href="https://twitter.com/jasnell" class="speaker">
               <div class="speaker-image">
                 <div class="Hex">
                   <div class="Hex-outer">
@@ -146,13 +146,13 @@
                   James Snell
                 </p>
                 <p class="speaker-links">
-                  <a href="https://twitter.com/jasnell">@jasnell</a>
+                  @jasnell
                 </p>
               </div>
-            </div>
+            </a>
           </li>
           <li>
-            <div class="speaker">
+            <a href="https://twitter.com/bradleymeck" class="speaker">
               <div class="speaker-image">
                 <div class="Hex">
                   <div class="Hex-outer">
@@ -167,13 +167,13 @@
                   Bradley Meck
                 </p>
                 <p class="speaker-links">
-                  <a href="https://twitter.com/bradleymeck">@bradleymeck</a>
+                  @bradleymeck
                 </p>
               </div>
-            </div>
+            </a>
           </li>
           <li>
-            <div class="speaker">
+            <a href="https://twitter.com/zcbenz" class="speaker">
               <div class="speaker-image">
                 <div class="Hex">
                   <div class="Hex-outer">
@@ -188,13 +188,13 @@
                   Cheng Zhao
                 </p>
                 <p class="speaker-links">
-                  <a href="https://twitter.com/zcbenz">@zcbenz</a>
+                  @zcbenz
                 </p>
               </div>
-            </div>
+            </a>
           </li>
           <li>
-            <div class="speaker">
+            <a href="https://twitter.com/yoshuawuyts" class="speaker">
               <div class="speaker-image">
                 <div class="Hex">
                   <div class="Hex-outer">
@@ -209,13 +209,13 @@
                   Yoshua Wuyts
                 </p>
                 <p class="speaker-links">
-                  <a href="https://twitter.com/yoshuawuyts">@yoshuawuyts</a>
+                  @yoshuawuyts
                 </p>
               </div>
-            </div>
+            </a>
           </li>
           <li>
-            <div class="speaker">
+            <a href="https://twitter.com/mafintosh" class="speaker">
               <div class="speaker-image">
                 <div class="Hex">
                   <div class="Hex-outer">
@@ -230,10 +230,10 @@
                   Mathias Buus
                 </p>
                 <p class="speaker-links">
-                  <a href="https://twitter.com/mafintosh">@mafintosh</a>
+                  @mafintosh
                 </p>
               </div>
-            </div>
+            </a>
           </li>
         </ul>
 
@@ -250,13 +250,15 @@
         <div class="schedule-section">
           <div class="timetable">
             <div class="timetable-header">
+              <h3 class="timetable-venue">
+                Workshop at dots.              </h3>
               <p class="timetable-day -workshop">
                 <svg xmlns="http://www.w3.org/2000/svg" class="timetable-corner" fill="url(#color-workshop)"><use xlink:href="#corner"></use></svg>
                 Nov 12
               </p>
-              <h3 class="timetable-caption">Workshop, Tutorial</h3>
+              <p class="timetable-caption">Time</p>
               <div class="timetable-section">
-                <p>dots. event space</p>
+                <p>Event space</p>
               </div>
             </div>
             <div class="timetable-row">
@@ -304,14 +306,17 @@
         <div class="schedule-section">
           <div class="timetable">
             <div class="timetable-header">
+              <p class="timetable-venue">
+                Conference at Markcity
+              </p>
               <p class="timetable-day -conference">
                 <svg xmlns="http://www.w3.org/2000/svg" class="timetable-corner" fill="url(#color-conference)"><use xlink:href="#corner"></use></svg>
                 Nov 13
               </p>
-              <h3 class="timetable-caption">Conference</h3>
+              <h3 class="timetable-caption">Time</h3>
               <div class="timetable-section">
-                <p>Seminar room A</p>
-                <p>Seminar room B</p>
+                <p>Room A</p>
+                <p>Room B</p>
               </div>
             </div>
             <div class="timetable-row">
@@ -354,8 +359,7 @@
             </h3>
             <p class="venue-address">
               <a href="#">
-                東京都渋谷区宇田川町20-17<br>
-                NOF渋谷公園通りビル 8F
+                東京都渋谷区宇田川町20-17 NOF渋谷公園通りビル 8F
               </a>
             </p>
           </section>
@@ -366,8 +370,7 @@
             </h3>
             <p class="venue-address">
               <a href="#">
-                東京都渋谷区道玄坂1-12-1<br>
-                渋谷マークシティ13F
+                東京都渋谷区道玄坂1-12-1 渋谷マークシティ13F
               </a>
             </p>
           </section>
