--- a/2016/src/html/index.ejs
+++ b/2016/src/html/index.ejs
@@ -516,4 +516,5 @@
   </div>
 </footer>
 
+<script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDvBLklunoaVPhXh4b1jVcXoUclUlmtNiA&extension=.js'></script>
 <%- include('_layout/footer') -%>
