--- a/2016/src/html/_partial/svg.ejs
+++ b/2016/src/html/_partial/svg.ejs
@@ -25,6 +25,13 @@
       <stop offset="100%" stop-color="#61A347"/>
     </linearGradient>
 
+    <linearGradient id="header-hex" x1="0%" y1="0%" x2="0%" y2="100%">
+      <stop offset="80%" stop-color="#80BD01"/>
+      <stop offset="100%" stop-color="#61A347"/>
+      <!--<stop offset="80%" stop-color="#FFFEF7"/>-->
+      <!--<stop offset="100%" stop-color="#EADA96"/>-->
+    </linearGradient>
+
     <linearGradient id="color-conference" x1="0%" y1="0%" x2="0%" y2="100%">
       <stop offset="0%" stop-color="#80BD01"/>
       <stop offset="100%" stop-color="#61A347"/>
@@ -45,6 +52,14 @@
 
     <symbol id="corner" viewBox="0 0 181 104">
       <path d="M0 0h181v104"/>
+    </symbol>
+
+    <symbol id="nav" viewBox="0 0 48 48">
+      <g fill-rule="evenodd"><path d="M0 0h48v8H0zM0 20h48v8H0zM0 40h48v8H0z"/></g>
+    </symbol>
+
+    <symbol id="close" viewBox="0 0 48 48">
+      <path fill-rule="evenodd" d="M24 16.93L7.03-.043l-7.072 7.07L16.928 24-.04 40.97l7.07 7.072L24 31.072l16.97 16.97 7.072-7.07L31.072 24 48.04 7.03l-7.07-7.072L24 16.928z"/>
     </symbol>
 
   </defs>
