--- a/2016/src/html/index.ejs
+++ b/2016/src/html/index.ejs
@@ -5,11 +5,11 @@
   <div class="cover">
       <nav class="globalNav -index">
       <ul class="globalNav-list">
-        <li><a href="#" class="globalNav-target">About</a></li>
-        <li><a href="#" class="globalNav-target">Speakers</a></li>
-        <li><a href="#" class="globalNav-target">Schedule</a></li>
-        <li><a href="#" class="globalNav-target">Venue</a></li>
-        <li><a href="#" class="globalNav-target">Sponsors</a></li>
+        <li><a href="about.html" class="globalNav-target">About</a></li>
+        <li><a href="speakers.html" class="globalNav-target">Speakers</a></li>
+        <li><a href="schedule.html" class="globalNav-target">Schedule</a></li>
+        <li><a href="venue.html" class="globalNav-target">Venue</a></li>
+        <li><a href="sponsors.html" class="globalNav-target">Sponsors</a></li>
         <li><a href="#" class="globalNav-target -button">Tickets</a></li>
       </ul>
     </nav>
@@ -424,100 +424,6 @@
     </div>
   </div>
 </div>
-
-<!-- Organizers -->
-<!--<div class="Section organizers">-->
-  <!--<h2 class="Section-title">Team</h2>-->
-  <!--<div class="Container">-->
-    <!--<ul class="organizers-list">-->
-      <!--<li>-->
-        <!--<div class="organizer">-->
-          <!--<p class="organizer-name"><a href="https://twitter.com/yosuke_furukawa" target="_blank">yosuke_furukawa</a></p>-->
-        <!--</div>-->
-      <!--</li>-->
-      <!--<li>-->
-        <!--<div class="organizer">-->
-          <!--<p class="organizer-name"><a href="https://twitter.com/tito_net" target="_blank">tito</a></p>-->
-        <!--</div>-->
-      <!--</li>-->
-      <!--<li>-->
-        <!--<div class="organizer">-->
-          <!--<p class="organizer-name"><a href="https://twitter.com/watilde" target="_blank">watilde</a></p>-->
-        <!--</div>-->
-      <!--</li>-->
-      <!--<li>-->
-        <!--<div class="organizer">-->
-          <!--<p class="organizer-name"><a href="https://twitter.com/vanx2" target="_blank">vanx2</a></p>-->
-        <!--</div>-->
-      <!--</li>-->
-      <!--<li>-->
-        <!--<div class="organizer">-->
-          <!--<p class="organizer-name"><a href="https://twitter.com/kysnm" target="_blank">kysnm</a></p>-->
-        <!--</div>-->
-      <!--</li>-->
-      <!--<li>-->
-        <!--<div class="organizer">-->
-          <!--<p class="organizer-name"><a href="https://twitter.com/leader22" target="_blank">leader22</a></p>-->
-        <!--</div>-->
-      <!--</li>-->
-      <!--<li>-->
-        <!--<div class="organizer">-->
-          <!--<p class="organizer-name"><a href="https://twitter.com/n0bisuke" target="_blank">nobisuke</a></p>-->
-        <!--</div>-->
-      <!--</li>-->
-      <!--<li>-->
-        <!--<div class="organizer">-->
-          <!--<p class="organizer-name"><a href="https://twitter.com/sota0805" target="_blank">sotayamashita</a></p>-->
-        <!--</div>-->
-      <!--</li>-->
-      <!--<li>-->
-        <!--<div class="organizer">-->
-          <!--<p class="organizer-name"><a href="https://twitter.com/kohei_takata" target="_blank">tako_black</a></p>-->
-        <!--</div>-->
-      <!--</li>-->
-      <!--<li>-->
-        <!--<div class="organizer">-->
-          <!--<p class="organizer-name"><a href="https://twitter.com/leichtgewicht" target="_blank">martin</a></p>-->
-        <!--</div>-->
-      <!--</li>-->
-      <!--<li>-->
-        <!--<div class="organizer">-->
-          <!--<p class="organizer-name"><a href="https://twitter.com/axross_" target="_blank">axross</a></p>-->
-        <!--</div>-->
-      <!--</li>-->
-      <!--<li>-->
-        <!--<div class="organizer">-->
-          <!--<p class="organizer-name"><a href="https://twitter.com/ledsun" target="_blank">ledsun</a></p>-->
-        <!--</div>-->
-      <!--</li>-->
-      <!--<li>-->
-        <!--<div class="organizer">-->
-          <!--<p class="organizer-name"><a href="https://twitter.com/tgfjt" target="_blank">tgfjt</a></p>-->
-        <!--</div>-->
-      <!--</li>-->
-      <!--<li>-->
-        <!--<div class="organizer">-->
-          <!--<p class="organizer-name"><a href="https://twitter.com/hiloki" target="_blank">hiloki</a></p>-->
-        <!--</div>-->
-      <!--</li>-->
-    <!--</ul>-->
-  <!--</div>-->
-<!--</div>-->
-
-<footer class="footer">
-  <div class="Container">
-    <img src="img/logo-node-invert.svg" alt="node.js" class="footer-logo">
-    <ul class="footer-links">
-      <li><a href="https://nodejs.org/en/" target="_blank">Node.js</a></li>
-      <li><a href="http://nodefest.jp/2015/" target="_blank">Node Fest. 2015</a></li>
-      <li><a href="http://nodejs.jp/" target="_blank">Node.js Japan User Group</a></li>
-      <li><a href="coc.html" target="_blank">Code of Conduct</a></li>
-    </ul>
-    <p class="copyright">© 2016 東京Node学園祭 実行委員会 | Node.js 日本ユーザグループ</p>
-    <p class="createby">This Web site was created by @hiloki and PixelGrid, Inc.
-    </p>
-  </div>
-</footer>
 
 <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDvBLklunoaVPhXh4b1jVcXoUclUlmtNiA&extension=.js'></script>
 <%- include('_layout/footer') -%>
